--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <audio loop="true" src="assets/ambience.wav"></audio>
+        <audio loop="true" src="assets/ambience.mp3"></audio>
 
         <!-- ENTRANCE -->
         <div id="box_entr">
