--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:wght@300..800&family=Patrick+Hand&display=swap" rel="stylesheet">
+        <link href="assets/p_fav.ico" rel="icon" type="image/x-icon">
         <script
         src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
