--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div id="box_para">
                 <p>In this very website, you will attempt five puzzles, all varying in difficulty.</p>
                 <p>Remember to think abstractly; none of the puzzles will be obvious in nature.</p>
-                <p>If you're one of the few who pass all the trials, you'll receive <a onclick="linkToGame()">a free Steam game</a>.</p>
+                <p>If you're one of the few who pass all the trials, you'll receive <a onclick="linkToGame()">a Steam game for free</a>.</p>
             </div>
             <p id="small_para">Throughout this experience, you may need to type, click, or use external resources.</p>
             <button id="btn_entr">ENTER</button>
